--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,4 +20,4 @@ jobs:
         uses: actions/checkout@v3
       -
         name: Build
-        run: bash tools/build.sh
+        run: sh tools/build.sh
